tests/snapshots/snapshot__type_errors@standalone_type.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/standalone_type.roto
---
Error: Type error: expected a value, but found type `String`
   ╭─[ tests/scripts/type_errors/standalone_type.roto:2:10 ]
   │
 2 │     let a = String;
   │             ───┬──  
   │                ╰──── expected a value
   │
   ├─[ tests/scripts/type_errors/standalone_type.roto:2:10 ]
   │
 1 │ filter foo() {
   │ ┬  
   │ ╰── type `String` defined here
───╯
